--- a/InterpretBank/InterpretBank/Controls/WatermarkTextBox.xaml
+++ b/InterpretBank/InterpretBank/Controls/WatermarkTextBox.xaml
@@ -7,7 +7,7 @@
              x:Name="Root"
              d:DesignHeight="450"
              d:DesignWidth="800">
-    <Grid Margin="10 10 0 0">
+    <Grid>
         <TextBox x:Name="TextBox"
                  Text="{Binding Text, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
                  HorizontalContentAlignment="Center"
