--- a/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
@@ -25,29 +25,45 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ToggleButton x:Name="TagsOrGlossariesToggleButton"
-                      Height="20">
-            <ToggleButton.Style>
-                <Style TargetType="ToggleButton"
-                       BasedOn="{StaticResource ToggleButtonStyle}">
-                    <Setter Property="Content"
-                            Value="Use glossaries" />
-                    <Style.Triggers>
-                        <Trigger Property="IsPressed"
-                                 Value="True">
-                            <Setter Property="Content"
-                                    Value="Use tags" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </ToggleButton.Style>
-        </ToggleButton>
-        <DockPanel Grid.Row="1"
-                   HorizontalAlignment="Stretch">
-            <TextBlock Text="{x:Static interpretBank:PluginResources.SettingsWindow_TextBlock_Tags}"
-                       DockPanel.Dock="Top"
-                       Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=True}" />
-            <sdl:MultiSelectComboBox Margin="0 2 0 0"
+        <DockPanel LastChildFill="False" HorizontalAlignment="Stretch">
+            <ToggleButton x:Name="TagsOrGlossariesToggleButton"
+                          DockPanel.Dock="Left"
+                          HorizontalAlignment="Left"
+                          Margin="0 10 0 0"
+                          Height="20">
+                <ToggleButton.Style>
+                    <Style TargetType="ToggleButton"
+                           BasedOn="{StaticResource IOSToggleButtonStyle}">
+                        <Setter Property="Content"
+                                Value="Use glossaries" />
+                        <Style.Triggers>
+                            <Trigger Property="IsPressed"
+                                     Value="True">
+                                <Setter Property="Content"
+                                        Value="Use tags" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ToggleButton.Style>
+            </ToggleButton>
+            <TextBlock VerticalAlignment="Bottom" Margin="5 0 0 2">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Text"
+                                Value="Use glossaries" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton}" Value="True">
+                                <Setter Property="Text" Value="Use tags"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+        </DockPanel>
+      
+           
+            <sdl:MultiSelectComboBox Margin="0 5 0 0"
+                                     Grid.Row="1"
                                      Height="64"
                                      SelectedItems="{Binding SelectedTags, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                      BorderBrush="Red"
@@ -55,20 +71,16 @@
                                      ItemsSource="{Binding Tags, UpdateSourceTrigger=PropertyChanged}"
                                      DropdownItemTemplate="{StaticResource TagTemplate}"
                                      SelectedItemTemplate="{StaticResource TagTemplate}" />
-        </DockPanel>
-
-        <DockPanel Grid.Row="2"
-                   HorizontalAlignment="Stretch">
-            <TextBlock Text="{x:Static interpretBank:PluginResources.SettingsWindow_TextBlock_Glossaries}"
-                       DockPanel.Dock="Top"
-                       Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}" />
-            <sdl:MultiSelectComboBox Margin="0 2 0 0"
+    
+        
+        
+            <sdl:MultiSelectComboBox Margin="0 5 0 0"
+                                     Grid.Row="2"
                                      Height="64"
                                      Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
                                      SelectedItems="{Binding SelectedGlossaries, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                      ItemsSource="{Binding Glossaries, UpdateSourceTrigger=PropertyChanged}"
                                      DropdownItemTemplate="{StaticResource GlossaryTemplate}"
                                      SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
-        </DockPanel>
     </Grid>
 </UserControl>
