--- a/InterpretBank/InterpretBank/Controls/WatermarkTextBox.xaml
+++ b/InterpretBank/InterpretBank/Controls/WatermarkTextBox.xaml
@@ -3,16 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:converters="clr-namespace:InterpretBank.Converters"
              mc:Ignorable="d"
              x:Name="Root"
              d:DesignHeight="450"
              d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <converters:RatioConverter x:Key="RatioConverter" />
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <TextBox x:Name="TextBox"
                  Text="{Binding Text, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
                  HorizontalContentAlignment="Center"
                  VerticalContentAlignment="Center"
-                 Height="25"
+                 FontSize="{Binding ActualHeight, ElementName=Root, Converter={StaticResource RatioConverter}, ConverterParameter=0.44}"
+                 Height="{Binding ActualHeight, ElementName=Root}"
                  IsKeyboardFocusedChanged="TextBox_OnIsKeyboardFocusedChanged" />
         <TextBlock IsHitTestVisible="False"
                    x:Name="Watermark"
