--- a/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
@@ -25,62 +25,57 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <DockPanel LastChildFill="False" HorizontalAlignment="Stretch">
+        <DockPanel LastChildFill="False"
+                   HorizontalAlignment="Stretch">
             <ToggleButton x:Name="TagsOrGlossariesToggleButton"
                           DockPanel.Dock="Left"
                           HorizontalAlignment="Left"
+                          IsChecked="{Binding UseTags}"
+                          IsEnabled="{Binding IsDbValid}"
+                          VerticalContentAlignment="Bottom"
+                          Style="{StaticResource IOSToggleButtonStyle}"
                           Margin="0 10 0 0"
-                          Height="20">
-                <ToggleButton.Style>
-                    <Style TargetType="ToggleButton"
-                           BasedOn="{StaticResource IOSToggleButtonStyle}">
-                        <Setter Property="Content"
-                                Value="Use glossaries" />
-                        <Style.Triggers>
-                            <Trigger Property="IsPressed"
-                                     Value="True">
-                                <Setter Property="Content"
-                                        Value="Use tags" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </ToggleButton.Style>
-            </ToggleButton>
-            <TextBlock VerticalAlignment="Bottom" Margin="5 0 0 2">
+                          Height="12" />
+            <TextBlock VerticalAlignment="Bottom"
+                       Margin="5 8 0 0">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Setter Property="Text"
                                 Value="Use glossaries" />
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton}" Value="True">
-                                <Setter Property="Text" Value="Use tags"/>
+                            <DataTrigger Binding="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton}"
+                                         Value="True">
+                                <Setter Property="Text"
+                                        Value="Use tags" />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </TextBlock.Style>
             </TextBlock>
         </DockPanel>
-      
-           
-            <sdl:MultiSelectComboBox Margin="0 5 0 0"
-                                     Grid.Row="1"
-                                     Height="64"
-                                     SelectedItems="{Binding SelectedTags, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                     BorderBrush="Red"
-                                     Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=True}"
-                                     ItemsSource="{Binding Tags, UpdateSourceTrigger=PropertyChanged}"
-                                     DropdownItemTemplate="{StaticResource TagTemplate}"
-                                     SelectedItemTemplate="{StaticResource TagTemplate}" />
-    
-        
-        
-            <sdl:MultiSelectComboBox Margin="0 5 0 0"
-                                     Grid.Row="2"
-                                     Height="64"
-                                     Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
-                                     SelectedItems="{Binding SelectedGlossaries, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                     ItemsSource="{Binding Glossaries, UpdateSourceTrigger=PropertyChanged}"
-                                     DropdownItemTemplate="{StaticResource GlossaryTemplate}"
-                                     SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
+
+
+        <sdl:MultiSelectComboBox Margin="0 5 0 0"
+                                 Grid.Row="1"
+                                 IsEnabled="{Binding IsDbValid}"
+                                 Height="64"
+                                 SelectedItems="{Binding SelectedTags, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                 BorderBrush="Red"
+                                 Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=True}"
+                                 ItemsSource="{Binding Tags, UpdateSourceTrigger=PropertyChanged}"
+                                 DropdownItemTemplate="{StaticResource TagTemplate}"
+                                 SelectedItemTemplate="{StaticResource TagTemplate}" />
+
+
+
+        <sdl:MultiSelectComboBox Margin="0 5 0 0"
+                                 Grid.Row="2"
+                                 IsEnabled="{Binding IsDbValid}"
+                                 Height="64"
+                                 Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
+                                 SelectedItems="{Binding SelectedGlossaries, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                 ItemsSource="{Binding Glossaries, UpdateSourceTrigger=PropertyChanged}"
+                                 DropdownItemTemplate="{StaticResource GlossaryTemplate}"
+                                 SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
     </Grid>
 </UserControl>
