--- a/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
+++ b/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
@@ -33,7 +33,8 @@
                         Value="11" />
             </Style>
 
-            <Style TargetType="GroupBox">
+            <Style TargetType="GroupBox"
+                   x:Key="HeaderStyle">
                 <Setter Property="HeaderTemplate">
                     <Setter.Value>
                         <DataTemplate>
@@ -58,6 +59,7 @@
 
         <GroupBox Header="Settings"
                   Grid.Column="0"
+                  Style="{StaticResource HeaderStyle}"
                   x:Name="SettingsGroupBox"
                   BorderThickness="0 1 0 0"
                   Margin="0 0 10 0">
@@ -81,15 +83,19 @@
                     </Style>
                 </DockPanel.Style>
 
-                <controls:ChooseFilepathControl Margin="10"
-                                                DockPanel.Dock="Top"
-                                                Height="23"
+                <TextBlock Text="Database filepath"
+                           DockPanel.Dock="Top" />
+                <controls:ChooseFilepathControl DockPanel.Dock="Top"
+                                                Height="25"
+                                                Margin="0 5 0 0"
                                                 Filepath="{Binding Filepath, Mode=TwoWay}"
                                                 VerticalContentAlignment="Top" />
 
                 <!--<TextBlock Text="Settings" DockPanel.Dock="Top" FontSize="15" Margin="0 0 0 20" Foreground="DarkCyan" />-->
 
+
                 <TextBlock Text="Source Language"
+                           Margin="0 20 0 0"
                            DockPanel.Dock="Top" />
                 <ComboBox ItemsSource="{Binding Languages}"
                           DockPanel.Dock="Top"
@@ -162,7 +168,7 @@
                 </ToggleButton.Style>
             </ToggleButton>
 
-         
+
 
             <controls1:WatermarkTextBox Margin="10 20 12 0"
                                         DockPanel.Dock="Top"
