--- a/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
@@ -7,6 +7,7 @@
              xmlns:sdl="http://schemas.sdl.com/xaml"
              xmlns:interpretBank="clr-namespace:InterpretBank"
              xmlns:converters="clr-namespace:InterpretBank.Converters"
+             x:Name="Root"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -17,6 +18,7 @@
                 <ResourceDictionary Source="/InterpretBank;component/Styles/Buttons.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converters:RatioConverter x:Key="RatioConverter"/>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -26,6 +28,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <DockPanel LastChildFill="False"
+                   
                    HorizontalAlignment="Stretch">
             <ToggleButton x:Name="TagsOrGlossariesToggleButton"
                           DockPanel.Dock="Left"
@@ -58,9 +61,8 @@
         <sdl:MultiSelectComboBox Margin="0 5 0 0"
                                  Grid.Row="1"
                                  IsEnabled="{Binding IsDbValid}"
-                                 Height="64"
+                                 Height="{Binding ActualHeight, ElementName=Root, Converter={StaticResource RatioConverter}, ConverterParameter=0.75}"
                                  SelectedItems="{Binding SelectedTags, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                 BorderBrush="Red"
                                  Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=True}"
                                  ItemsSource="{Binding Tags, UpdateSourceTrigger=PropertyChanged}"
                                  DropdownItemTemplate="{StaticResource TagTemplate}"
@@ -71,7 +73,7 @@
         <sdl:MultiSelectComboBox Margin="0 5 0 0"
                                  Grid.Row="2"
                                  IsEnabled="{Binding IsDbValid}"
-                                 Height="64"
+                                 Height="{Binding ActualHeight, ElementName=Root, Converter={StaticResource RatioConverter}, ConverterParameter=0.75}"
                                  Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
                                  SelectedItems="{Binding SelectedGlossaries, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                  ItemsSource="{Binding Glossaries, UpdateSourceTrigger=PropertyChanged}"
