--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
@@ -7,11 +7,10 @@
              xmlns:controls="clr-namespace:InterpretBank.TermbaseViewer.UI.Controls"
              xmlns:converters="clr-namespace:InterpretBank.TermbaseViewer.UI.Converters"
              xmlns:viewModel="clr-namespace:InterpretBank.TermbaseViewer.ViewModel"
+             xmlns:converters1="clr-namespace:InterpretBank.Converters"
              x:Name="TermbaseViewerControl"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance viewModel:TermbaseViewerViewModel}"
-             Height="450"
-             Width="800">
+             d:DataContext="{d:DesignInstance viewModel:TermbaseViewerViewModel}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -21,6 +20,7 @@
             <converters:ImageToBitmapImageConverter x:Key="ImageConverter" />
             <converters:LanguageToColorConverter x:Key="LanguageToColorConverter" />
             <converters:SubtractConverter x:Key="SubtractConverter" />
+            <converters1:RatioConverter x:Key="RatioConverter"/>
 
         </ResourceDictionary>
     </UserControl.Resources>
@@ -50,19 +50,16 @@
             <Border Grid.Row="0"
                     DockPanel.Dock="Top"
                     BorderBrush="LightGray"
+                    
                     BorderThickness="2 1 1 2"
                     Margin="5 5 0 5"
                     x:Name="EntryNote_Border">
-                <StackPanel>
-                    <StackPanel Orientation="Horizontal"
-                                Margin="5"
-                                DockPanel.Dock="Top">
 
-                        <controls:EditBox Label="Entry note: "
-                                          FontSize="13"
-                                          EditBoxText="{Binding SelectedEntry.EntryComment}" />
-                    </StackPanel>
-                </StackPanel>
+                <controls:EditBox Label="Entry note: "
+                                  Margin="5"
+                                  HorizontalAlignment="Stretch"
+                                  FontSize="13"
+                                  EditBoxText="{Binding SelectedEntry.EntryComment}" />
             </Border>
             <ListView Grid.Row="1"
                       DockPanel.Dock="Top"
@@ -78,7 +75,10 @@
                 <ListView.ItemTemplate>
                     <DataTemplate DataType="{x:Type model:TermModel}">
                         <Border CornerRadius="1"
+                                HorizontalAlignment="Left"
+                                Width="{Binding ActualWidth, ElementName=TermsGrid, Converter={StaticResource SubtractConverter}, ConverterParameter=26}"
                                 Margin="0 3 0 0"
+
                                 BorderThickness="4 0.7 0.7 2">
                             <Border.BorderBrush>
                                 <MultiBinding Converter="{StaticResource LanguageToColorConverter}">
